[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dexter"
version = "0.1.0"
description = "D3XT3COGNITION Framework"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "rich",
    "typer",
    "pyyaml",
    "requests",
]

[project.scripts]
dexter = "dexter.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dexter*"]